--- a/InferenceUI/requirements.txt
+++ b/InferenceUI/requirements.txt
@@ -1,5 +1,5 @@
-onnxruntime>=1.17.1
-opencv-python-headless>=4.0.0.21
+#opencv-python-headless>=4.0.0.21
+Pillow>=9.0.1
 pydantic>=2.6.1
 pyyaml>=5.1
 requests>=2.31.0
