--- a/ModelBackend/default_config.toml
+++ b/ModelBackend/default_config.toml
@@ -1,7 +1,5 @@
 [model]
-#filename="model.onnx"
-#folder_data="data/"
-filename="20240306_VIAB1-2_YOLOv7tiny.onnx"
-folder_data="./"
+filename="model.onnx"
+folder_data="./data/"
 image_size=[640, 640]
 precision="fp32"
