--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -33,8 +33,8 @@ services:
       - MODEL_PRECISION=fp32
 #      - MODEL_PRECISION=fp16
     volumes:
-      - ./UIdata/20240306_VIAB1-2_YOLOv7tiny.onnx:/home/app/data/model.onnx
-#      - ./UIdata/20240306_VIAB1-2_YOLOv7tiny.onnx_fp16:/home/app/data/model.onnx
+      - ./data/20240306_VIAB1-2_YOLOv7tiny.onnx:/home/app/data/model.onnx
+#      - ./data/20240306_VIAB1-2_YOLOv7tiny.onnx_fp16:/home/app/data/model.onnx
     ports:
       - 5007:5050  # external access port | only for debugging
 
@@ -72,11 +72,10 @@ services:
 #      - TI_IMPRESS_STATUS
 #      - TI_IMPRESS_ADDITIONAL_INFO
       - TI_IMPRESS_PROJECT_LINK=https://github.com/max-scw/MinimalInferenceUI.git
-
     volumes:
       # mount model into container
 #      - ./UIdata/20240306_VIAB1-2_YOLOv7tiny.onnx:/home/app/model.onnx
-      - ./UIdata/:/home/app/data/
+      - ./data/:/home/app/data/:rw
     ports:
       - 5006:8501  # external access port
 
