emulate camera as example

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -66,7 +66,7 @@ services:
       - TI_CAMERA_TRANSMISSION_TYPE=Multicast
       - TI_CAMERA_DESTINATION_IP_ADDRESS="192.168.10.221"
       - TI_CAMERA_DESTINATION_PORT=46000
-#      - TI_CAMERA_EMULATE_CAMERA=True
+      - TI_CAMERA_EMULATE_CAMERA=True  # <<===== EMULATE CAMERA FOR DEMONSTRATION
       # impress
       - TI_IMPRESS_PROJECT_NAME="Minimal Inference"
       - TI_IMPRESS_AUTHOR=SCHWMAX
