--- a/Frontend/default_config.toml
+++ b/Frontend/default_config.toml
@@ -6,7 +6,7 @@ additional_info=""
 project_link=""
 
 [camera]
-url="http://localhost:5005/test/image"
+url="http://basler-api:5050/test/image"
 exposure_time_microseconds=10000
 # camera address
 serial_number=""
@@ -19,7 +19,7 @@ destination_port=""
 emulate_camera=false
 
 [model]
-url="http://localhost:5007/inference"
+url="http://backend-onnx:5050/inference"
 folder_head="/home/app/"
 folder_data="data/"
 class_map=""
@@ -27,3 +27,5 @@ color_map=""
 
 [general]
 file_type_save_image=".webp"
+#file_box_pattern="../data/desired_coordinates.yml"
+#image_size=
