make image extension an argument

--- a/Frontend/default_config.toml
+++ b/Frontend/default_config.toml
@@ -15,6 +15,7 @@ timeout=""
 transmission_type=""
 destination_ip_address=""
 destination_port=""
+image_extension=".bmp"
 # debugging
 emulate_camera=false
 
