--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -33,7 +33,8 @@ services:
       - MODEL_PRECISION=fp32
 #      - MODEL_PRECISION=fp16
     volumes:
-      - ./models/20240306_VIAB1-2_YOLOv7tiny.onnx:/home/app/data/model.onnx:ro
+      - ./models/yolov7-tiny.onnx:/home/app/data/model.onnx:ro
+#      - ./models/20240306_VIAB1-2_YOLOv7tiny.onnx:/home/app/data/model.onnx:ro
 #      - ./models/20240306_VIAB1-2_YOLOv7tiny.onnx_fp16:/home/app/data/model.onnx
 #    ports:
 #      - 5007:5050  # external access port | only for debugging
@@ -60,12 +61,13 @@ services:
       - TI_CAMERA_URL=http://basler-api:5050/test/image
 #      - TI_CAMERA_URL=http://basler-api:5050/basler/take-photo
 #      - TI_CAMERA_SERIAL_NUMBER=24339728
-      - TI_CAMERA_IP_ADDRESS="192.168.10.5"
+      - TI_CAMERA_IP_ADDRESS=192.168.10.5
 #      - TI_CAMERA_TIMEOUT
       - TI_CAMERA_TRANSMISSION_TYPE=Multicast
-      - TI_CAMERA_DESTINATION_IP_ADDRESS="192.168.10.221"
+      - TI_CAMERA_DESTINATION_IP_ADDRESS=192.168.10.221
       - TI_CAMERA_DESTINATION_PORT=46000
       - TI_CAMERA_EMULATE_CAMERA=True  # <<===== EMULATE CAMERA FOR DEMONSTRATION
+      - TI_CAMERA_IMAGE_EXTENSION=.wbp
       # impress
       - TI_IMPRESS_PROJECT_NAME="Minimal Inference"
       - TI_IMPRESS_AUTHOR=SCHWMAX
