--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -8,17 +8,18 @@ services:
       context: ./
       dockerfile: BaslerAPI.Dockerfile
     image: schwmax/basler-api
+    restart: unless-stopped
 #    restart: unless-stopped
     environment:
       - TZ=Europe/Berlin
       # customize
-      - TEST_IMAGE=/home/app/testimage.bmp
+      - TEST_IMAGE=/home/app/testimages/*.bmp
     volumes:
-      - ./BaslerAPI/230221_143518_0000001264_CAM1_NORMAL_OK.bmp:/home/app/testimage.bmp
+      - ./testimages:/home/app/testimages
     ports:
       - 3956:3956
       - 46000:46000/udp  # set Streaming Port to fixed value with pylonViewer
-#      - 5005:5050  # external access port | only for debugging
+      - 5005:5050  # external access port | only for debugging
 
   inference-backend:
     container_name: backend-onnx
@@ -26,9 +27,11 @@ services:
       context: ./
       dockerfile: Backend.Dockerfile
     image: schwmax/toy-inference-backend
+    restart: unless-stopped
     environment:
       - TZ=Europe/Berlin
 #      - MODEL_FILENAME=20240306_VIAB1-2_YOLOv7tiny.onnx
+#      - MODEL_IMAGE_SIZE=(544, 640)
       - MODEL_IMAGE_SIZE=(544, 640)
       - MODEL_PRECISION=fp32
 #      - MODEL_PRECISION=fp16
@@ -45,7 +48,7 @@ services:
       context: ./
       dockerfile: Frontend.Dockerfile
     image: schwmax/toy-inference-frontend
-#    restart: unless-stopped
+    restart: unless-stopped
     environment:
       - TZ=Europe/Berlin
       # variables to customize container
@@ -58,8 +61,8 @@ services:
       - TI_MODEL_COLOR_MAP=colors.txt
 #      - TI_MODEL_IMAGE_SIZE=(544, 640)
       # camera
-      - TI_CAMERA_URL=http://basler-api:5050/test/image
-#      - TI_CAMERA_URL=http://basler-api:5050/basler/take-photo
+#      - TI_CAMERA_URL=http://basler-api:5050/test/image
+      - TI_CAMERA_URL=http://basler-api:5050/basler/take-photo
 #      - TI_CAMERA_SERIAL_NUMBER=24339728
       - TI_CAMERA_IP_ADDRESS=192.168.10.5
 #      - TI_CAMERA_TIMEOUT
