--- a/Backend/default_config.toml
+++ b/Backend/default_config.toml
@@ -1,7 +1,5 @@
 [model]
-filename="model.onnx"
-folder_data="./data/"
-#filename="20240306_VIAB1-2_YOLOv7tiny.onnx"
-#folder_data="./"
-image_size=[640, 640]
+filename="yolov7-tiny.onnx"
+folder_data="./models/"
+image_size=[544, 640]
 precision="fp32"
