--- a/Backend/default_config.toml
+++ b/Backend/default_config.toml
@@ -1,7 +1,7 @@
 
 
 [inference]
-#url="inference-backend:5050"
+#url="inference-backend:5050/inference"
 url="http://localhost:5052/inference"
 
 
@@ -23,5 +23,5 @@ emulate_camera=true
 image_extension=".jpg"
 
 [pattern-checker]
-#url="pattern-checker:5050"
-url="http://localhost:5053"
+#url="pattern-checker:5050/check"
+url="http://localhost:5053/check"
