--- a/Inference/default_config.toml
+++ b/Inference/default_config.toml
@@ -1,6 +1,6 @@
 [model]
 #filename="yolov7-tiny.onnx"
 filename="model.onnx"
-folder_data="./models/"
+folder_data="./data/"
 image_size=[544, 640]
 precision="fp32"
