--- a/Backend/default_config.toml
+++ b/Backend/default_config.toml
@@ -1,28 +1,24 @@
 
 
 [inference]
-#url="inference-backend:5050/inference"
-url="http://localhost:5052/inference"
+url="http://inference:5050/inference"
+#url="http://localhost:5052/inference"
 
 
 [camera]
-#url="camera-adapter:5050/basler/take-photo"
-url="http://localhost:5051/basler/take-photo"
+url="http://camera-adapter:5050/basler/take-photo"
+#url="http://localhost:5051/basler/take-photo"
 
 serial_number=1
 ip_address="1.1.1.1"
 emulate_camera=true
-##      - TI_CAMERA_SERIAL_NUMBER=24339728
-#      - TI_CAMERA_IP_ADDRESS=192.168.10.5
-##      - TI_CAMERA_TIMEOUT
-#      - TI_CAMERA_TRANSMISSION_TYPE=Multicast
-#      - TI_CAMERA_DESTINATION_IP_ADDRESS=192.168.10.221
-#      - TI_CAMERA_DESTINATION_PORT=46000
-#      - TI_CAMERA_EMULATE_CAMERA=True  # <<===== EMULATE CAMERA FOR DEMONSTRATION
-#      - TI_CAMERA_IMAGE_EXTENSION=.wbp
+#serial_number=
+#ip_address=
+#timeout=
+#transmission_type=
+#destination_ip_address=
+#destination_port=
+#format="jpg"
+#quality=75
 image_extension=".jpg"
 
-[pattern-checker]
-#prefix="PC"
-folder="./data/"
-default_pattern=""
