rename env var MODEL_MAPPINGS => MODEL_MAPPING

--- a/Backend/default_config.toml
+++ b/Backend/default_config.toml
@@ -26,7 +26,7 @@ image_extension=".jpg"
 [model]
 folder_head="./"
 folder_data="data"
-mappings=""
+mapping=""
 
 [general]
 save_images="all"  # literal: "all", "every x", "no"
