--- a/monitoring/prometheus.yml
+++ b/monitoring/prometheus.yml
@@ -6,3 +6,13 @@ scrape_configs:
    static_configs:
     - targets:
        - camera-adapter:5050
+
+ - job_name: backend
+   static_configs:
+    - targets:
+       - backend-service:5050
+
+ - job_name: inference
+   static_configs:
+    - targets:
+       - inference-service:5050
