--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,11 +1,12 @@
 services:
   basler-camera-service:
     container_name: camera-adapter
-    image: maxscw/baslercameraadapter:v0.4.14
+    image: maxscw/baslercameraadapter:v0.4.25
     restart: unless-stopped
     environment:
       - TZ=Europe/Berlin
       - LOGGING_LEVEL=DEBUG
+#      - PREFIX=  # default is no prefix
       - FRAMES_PER_SECOND=10
       - ACQUISITION_MODE=SingleFrame
 
@@ -19,6 +20,11 @@ services:
       - TIMEOUT_MS=5001
       - IMAGE_FORMAT=jpeg
       - IMAGE_QUALITY=100
+      - IMAGE_ROTATION_ANGLE=180
+      - IMAGE_ROI_LEFT=0.14
+      - IMAGE_ROI_RIGHT=0.885
+#      - EMULATE_CAMERA=true
+#      - TEST_IMAGE=./test
 #    volumes:
 #      - ./testimages:/home/app/test
     ports:
@@ -35,10 +41,11 @@ services:
     environment:
       - TZ=Europe/Berlin
       - LOGGING_LEVEL=DEBUG
-#      - MODEL_FILENAME=yolov7-tiny.onnx
-      - MODEL_IMAGE_SIZE=(544, 640)
-      - MODEL_PRECISION=fp32
-#      - MODEL_PRECISION=fp16
+#      - PREFIX=IF  # default is IF
+#      - IF_MODEL_FILENAME=yolov7-tiny.onnx
+      - IF_MODEL_IMAGE_SIZE=(544, 640)
+      - IF_MODEL_PRECISION=fp32
+#      - IF_MODEL_PRECISION=fp16
     volumes:
       - ./models/yolov7-tiny.onnx:/home/app/data/model.onnx:ro
 #      - ./models/yolov7-tiny.onnx_fp16:/home/app/data/model.onnx
@@ -54,6 +61,7 @@ services:
     environment:
       - TZ=Europe/Berlin
       - LOGGING_LEVEL=DEBUG
+#      - PREFIX=BE  # default is BE
 #      - BE_INFERENCE_URL=http://inference:5050/inference
 #      - BE_CAMERA_URL=http://camera-adapter:5050/basler/continuous-acquisition/get-image
       - BE_CAMERA_URL=http://camera-adapter:5050/basler/single-frame-acquisition/take-photo
@@ -61,7 +69,8 @@ services:
       - BE_CAMERA_TIMEOUT=5.1
       - BE_INFERENCE_TIMEOUT=2
       # model
-      - BE_MODEL_MAPPING=./data/class_map_CRU.csv
+      - BE_MODEL_MAPPING=./settings/class_map_CRU.csv
+      - BE_PATTERN_FILE=./settings/desired_coordinates.yml
       # general
       - BE_GENERAL_SAVE_IMAGES=all
     volumes:
@@ -79,12 +88,11 @@ services:
     environment:
       - TZ=Europe/Berlin
       # variables to customize container
-#      - PREFIX=FE
+#      - PREFIX=FE  # default is FE
       # general configs
       - FE_GENERAL_URL_BACKEND="http://backend:5050/main"
-#      -
-#      - TI_GENERAL_TITLE="MVE for object recognition"
-#      - TI_GENERAL_DESCRIPTION="loreipsum ..."
+#      - FE_GENERAL_TITLE="MVE for object recognition"
+#      - FE_GENERAL_DESCRIPTION="loreipsum ..."
       # camera
 #      - FE_CAMERA_SERIAL_NUMBER=0
       - FE_CAMERA_IP_ADDRESS=192.168.10.5
@@ -99,8 +107,8 @@ services:
       # impress
       - FE_IMPRESS_PROJECT_NAME="Minimal Inference"
       - FE_IMPRESS_AUTHOR=SCHWMAX
-#      - TI_IMPRESS_STATUS
-#      - TI_IMPRESS_ADDITIONAL_INFO
+#      - FE_IMPRESS_STATUS
+#      - FE_IMPRESS_ADDITIONAL_INFO
       - FE_IMPRESS_PROJECT_LINK=https://github.com/max-scw/MinimalImageInferenceService.git
 
       # streamlit
@@ -122,7 +130,7 @@ services:
     volumes:
       - ./monitoring/prometheus.yml:/etc/prometheus/prometheus.yml:ro
       - prometheus_data:/prometheus  # Persistent storage for Prometheus data
-    ports:
+#    ports:
 #      - 5007:9090  # only for debugging
 #    depends_on:
 #      - basler-camera-service
@@ -141,7 +149,7 @@ services:
       - GF_USERS_ALLOW_SIGN_UP=false
       - GF_DASHBOARDS_DEFAULT_HOME_DASHBOARD_PATH=/var/lib/grafana/dashboards/dashboard.json
     volumes:
-      - 'grafana_data:/var/lib/grafana'  # Persistent storage for Grafana data. Not required as nothing should be changed
+#      - grafana_data:/var/lib/grafana  # Persistent storage for Grafana data. Not required as nothing should be changed
       - ./monitoring/grafana/datasource.yml:/etc/grafana/provisioning/datasources/datasource.yml:ro
       - ./monitoring/grafana/dashboard.json:/etc/grafana/provisioning/dashboards/dashboard.json:ro
       - ./monitoring/grafana/dashboard.json:/var/lib/grafana/dashboards/dashboard.json:ro
