--- a/.github/workflows/docker-build-deploy-backend.yml
+++ b/.github/workflows/docker-build-deploy-backend.yml
@@ -32,7 +32,7 @@ jobs:
         uses: docker/build-push-action@v4
         with:
           context: .
-          file: backend.Dockerfile
+          file: Backend.Dockerfile
           push: true
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
